finish flags page

--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
 </head>
 <body>
 
-<div class="starter-template">
-	<div class="container">
-	  <div class="row">
-		  <div class="col-sm-4">
-		  	<img class="flag" src="src/it.svg">
-		  </div>
-		  <div class="col-sm-4">
-		  	<img class="flag" src="src/gb.svg">
-		  </div>
-		  <div class="col-sm-4">.col-sm-4</div>
+	<div class="starter-template">
+		<div class="container">
+		  <div class="row">
+			  <div class="col-sm-3">
+			  	<a href="base.html"><img class="flag" src="src/it.svg"></a>
+			  </div>
+			  <div class="col-sm-3">
+			  	<img class="flag" src="src/gb.svg">
+			  </div>
+			  <div class="col-sm-3">
+			  	<img class="flag" src="src/sy.svg">
+			  </div>
+			  <div class="col-sm-3">
+			  	<img class="flag" src="src/es.svg">
+			  </div>
+			</div>
+		</div>
+		<div class="logo">
+			<button type="button" class="btn btn-default">Logo Here</button>
 		</div>
 	</div>
-</div>
 
 </body>
 </html>
